# GayLogger

./: .gitignore  CMakeLists.txt
src/: buffer.c  buffer.h  hook.c  hook.h  main.c  sender.c  sender.h  utils.c  utils.h
